test/files/valid/union.fbs
union ValidUnion {
  Foo,
  Bar,
  A0: string,
  A1: Foo,
  A2: Bar,
}

struct Foo {
  x: uint8;
}

table Bar {
  x: uint8;
}
