test/files/invalid/helpers/overlapping_namespace_inner1.fbs
namespace Foo.Bar;

table X {}
